# src/openapi_server/models/get_contacts.py
@@ -1,0 +1,106 @@
+# coding: utf-8
+
+"""
+    Notebook API
+
+    No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+
+    The version of the OpenAPI document: 0.0.1
+    Generated by OpenAPI Generator (https://openapi-generator.tech)
+
+    Do not edit the class manually.
+"""  # noqa: E501
+
+
+from __future__ import annotations
+import pprint
+import re  # noqa: F401
+import json
+
+
+
+
+from pydantic import BaseModel, ConfigDict, Field, StrictStr
+from typing import Any, ClassVar, Dict, List, Optional
+from typing_extensions import Annotated
+from openapi_server.models.get_contact import GetContact
+try:
+    from typing import Self
+except ImportError:
+    from typing_extensions import Self
+
+class GetContacts(BaseModel):
+    """
+    GetContacts
+    """ # noqa: E501
+    contacts: Annotated[List[GetContact], Field(min_length=1)]
+    page_token: Optional[StrictStr] = Field(default=None, alias="pageToken")
+    __properties: ClassVar[List[str]] = ["contacts", "pageToken"]
+
+    model_config = {
+        "populate_by_name": True,
+        "validate_assignment": True,
+        "protected_namespaces": (),
+    }
+
+
+    def to_str(self) -> str:
+        """Returns the string representation of the model using alias"""
+        return pprint.pformat(self.model_dump(by_alias=True))
+
+    def to_json(self) -> str:
+        """Returns the JSON representation of the model using alias"""
+        # TODO: pydantic v2: use .model_dump_json(by_alias=True, exclude_unset=True) instead
+        return json.dumps(self.to_dict())
+
+    @classmethod
+    def from_json(cls, json_str: str) -> Self:
+        """Create an instance of GetContacts from a JSON string"""
+        return cls.from_dict(json.loads(json_str))
+
+    def to_dict(self) -> Dict[str, Any]:
+        """Return the dictionary representation of the model using alias.
+
+        This has the following differences from calling pydantic's
+        `self.model_dump(by_alias=True)`:
+
+        * `None` is only added to the output dict for nullable fields that
+          were set at model initialization. Other fields with value `None`
+          are ignored.
+        """
+        _dict = self.model_dump(
+            by_alias=True,
+            exclude={
+            },
+            exclude_none=True,
+        )
+        # override the default output from pydantic by calling `to_dict()` of each item in contacts (list)
+        _items = []
+        if self.contacts:
+            for _item in self.contacts:
+                if _item:
+                    _items.append(_item.to_dict())
+            _dict['contacts'] = _items
+        # set to None if page_token (nullable) is None
+        # and model_fields_set contains the field
+        if self.page_token is None and "page_token" in self.model_fields_set:
+            _dict['pageToken'] = None
+
+        return _dict
+
+    @classmethod
+    def from_dict(cls, obj: Dict) -> Self:
+        """Create an instance of GetContacts from a dict"""
+        if obj is None:
+            return None
+
+        if not isinstance(obj, dict):
+            return cls.model_validate(obj)
+
+        _obj = cls.model_validate({
+            "contacts": [GetContact.from_dict(_item) for _item in obj.get("contacts")] if obj.get("contacts") is not None else None,
+            "pageToken": obj.get("pageToken")
+        })
+        return _obj
+
+
